--- a/Arkoudotsarkes/Arkoudotsarkes/Arkoudotsarkes-Info.plist
+++ b/Arkoudotsarkes/Arkoudotsarkes/Arkoudotsarkes-Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Arkoudotsarkes would like to use your location</string>
 	<key>UILaunchImageFile</key>
 	<string>Default</string>
 	<key>CFBundleDevelopmentRegion</key>
@@ -43,6 +45,10 @@
 	<string>Main_iPhone</string>
 	<key>UIMainStoryboardFile~ipad</key>
 	<string>Main_iPad</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+	</array>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
